--- a/package.json
+++ b/package.json
@@ -69,6 +69,8 @@
     ]
   },
   "devDependencies": {
+    "@percy/cli": "^1.10.0",
+    "@percy/cypress": "^3.1.2",
     "@storybook/addon-actions": "^6.5.10",
     "@storybook/addon-essentials": "^6.5.10",
     "@storybook/addon-interactions": "^6.5.10",
